@@ -17,21 +17,25 @@ package org.openrewrite.config;
 
 import lombok.EqualsAndHashCode;
 import lombok.Value;
-import org.jspecify.annotations.NonNull;
 import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Test;
 import org.openrewrite.*;
 import org.openrewrite.marker.SearchResult;
 import org.openrewrite.test.RewriteTest;
 import org.openrewrite.text.ChangeText;
+import org.openrewrite.text.Find;
 import org.openrewrite.text.PlainText;
 import org.openrewrite.text.PlainTextVisitor;
 
+import java.net.URI;
 import java.nio.file.Paths;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 
+import static java.util.Collections.emptyList;
+import static java.util.Collections.emptySet;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.openrewrite.test.RewriteTest.toRecipe;
 import static org.openrewrite.test.SourceSpecs.text;
@@ -44,8 +48,8 @@ class DeclarativeRecipeTest implements RewriteTest {
         rewriteRun(
           spec -> {
               spec.validateRecipeSerialization(false);
-              DeclarativeRecipe dr = new DeclarativeRecipe("test", "test", "test", null,
-                null, null, true, null);
+              DeclarativeRecipe dr = new DeclarativeRecipe("test", "test", "test", emptySet(),
+                null, URI.create("null"), true, emptyList());
               dr.addPrecondition(
                 toRecipe(() -> new PlainTextVisitor<>() {
                     @Override
@@ -73,8 +77,8 @@ class DeclarativeRecipeTest implements RewriteTest {
 
     @Test
     void addingPreconditionsWithOptions() {
-        DeclarativeRecipe dr = new DeclarativeRecipe("test", "test", "test", null,
-          null, null, true, null);
+        DeclarativeRecipe dr = new DeclarativeRecipe("test", "test", "test", emptySet(),
+          null, URI.create("dummy"), true, emptyList());
         dr.addPrecondition(
           toRecipe(() -> new PlainTextVisitor<>() {
               @Override
@@ -103,8 +107,8 @@ class DeclarativeRecipeTest implements RewriteTest {
 
     @Test
     void uninitializedFailsValidation() {
-        DeclarativeRecipe dr = new DeclarativeRecipe("test", "test", "test", null,
-          null, null, true, null);
+        DeclarativeRecipe dr = new DeclarativeRecipe("test", "test", "test", emptySet(),
+          null, URI.create("dummy"), true, emptyList());
         dr.addUninitializedPrecondition(
           toRecipe(() -> new PlainTextVisitor<>() {
               @Override
@@ -125,13 +129,13 @@ class DeclarativeRecipeTest implements RewriteTest {
         Validated<Object> validation = dr.validate();
         assertThat(validation.isValid()).isFalse();
         assertThat(validation.failures().size()).isEqualTo(2);
-        assertThat(validation.failures().get(0).getProperty()).isEqualTo("initialization");
+        assertThat(validation.failures().getFirst().getProperty()).isEqualTo("initialization");
     }
 
     @Test
     void uninitializedWithInitializedRecipesPassesValidation() {
-        DeclarativeRecipe dr = new DeclarativeRecipe("test", "test", "test", null,
-          null, null, true, null);
+        DeclarativeRecipe dr = new DeclarativeRecipe("test", "test", "test", emptySet(),
+          null, URI.create("dummy"), true, emptyList());
         dr.setPreconditions(
           List.of(
             toRecipe(() -> new PlainTextVisitor<>() {
@@ -249,17 +253,92 @@ class DeclarativeRecipeTest implements RewriteTest {
                    relativeFileName: test.txt
                    fileContents: "test"
               """, "org.openrewrite.PreconditionTest")
-            .afterRecipe(run -> {
-                assertThat(run.getChangeset().getAllResults()).anySatisfy(
-                  s -> {
-                      assertThat(s.getAfter()).isNotNull();
-                      assertThat(s.getAfter().getSourcePath()).isEqualTo(Paths.get("test.txt"));
-                  }
-                );
-            })
+            .afterRecipe(run -> assertThat(run.getChangeset().getAllResults()).anySatisfy(
+              s -> {
+                  //noinspection DataFlowIssue
+                  assertThat(s.getAfter()).isNotNull();
+                  assertThat(s.getAfter().getSourcePath()).isEqualTo(Paths.get("test.txt"));
+              }
+            ))
             .expectedCyclesThatMakeChanges(1),
           text("1")
         );
+    }
+
+    @Test
+    void scanningPreconditionMet() {
+        rewriteRun(
+          spec -> spec.recipeFromYaml("""
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: org.openrewrite.ScanningPreconditionTest
+              description: Test.
+              preconditions:
+                - org.openrewrite.search.RepositoryContainsFile:
+                    filePattern: sam.txt
+              recipeList:
+                - org.openrewrite.text.FindAndReplace:
+                    find: foo
+                    replace: bar
+              """, "org.openrewrite.ScanningPreconditionTest"),
+          text("sam", spec -> spec.path("sam.txt")),
+          text("foo", "bar")
+        );
+    }
+
+    @Test
+    void scanningPreconditionNotMet() {
+        rewriteRun(
+          spec -> spec.recipeFromYaml("""
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: org.openrewrite.ScanningPreconditionTest
+              description: Test.
+              preconditions:
+                - org.openrewrite.search.RepositoryContainsFile:
+                    filePattern: sam.txt
+              recipeList:
+                - org.openrewrite.text.FindAndReplace:
+                    find: foo
+                    replace: bar
+              """, "org.openrewrite.ScanningPreconditionTest"),
+          text("foo")
+        );
+    }
+
+    @Test
+    void preconditionOnNestedDeclarative() {
+        rewriteRun(
+          spec -> spec.recipeFromYaml("""
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: org.openrewrite.PreconditionOnDeclarative
+              description: Test.
+              preconditions:
+                - org.openrewrite.text.Find:
+                    find: foo
+              recipeList:
+                - org.openrewrite.DeclarativeExample
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: org.openrewrite.DeclarativeExample
+              description: Test.
+              recipeList:
+                - org.openrewrite.text.FindAndReplace:
+                    find: foo
+                    replace: bar
+              """, "org.openrewrite.PreconditionOnDeclarative"),
+          text("foo", "bar")
+        );
+    }
+
+    @Test
+    void exposesUnderlyingDataTables() {
+        DeclarativeRecipe dr = new DeclarativeRecipe("org.openrewrite.DeclarativeDataTable", "declarative with data table",
+          "test", emptySet(), null, URI.create("dummy"), true, Collections.emptyList());
+        dr.addUninitialized(new Find("sam", null, null, null, null, null, null, null));
+        dr.initialize(List.of(), Map.of());
+        assertThat(dr.getDataTableDescriptors()).anyMatch(it -> "org.openrewrite.table.TextMatches".equals(it.getName()));
     }
 
     @Test
@@ -293,7 +372,7 @@ class DeclarativeRecipeTest implements RewriteTest {
           )
         );
         rewriteRun(
-          spec -> spec.recipe(root).cycles(10).cycles(3).expectedCyclesThatMakeChanges(3),
+          spec -> spec.recipe(root).cycles(10).cycles(3).expectedCyclesThatMakeChanges(2),
           text("1", "1+1+1")
         );
         assertThat(cycleCount).hasValue(3);
@@ -347,7 +426,7 @@ class DeclarativeRecipeTest implements RewriteTest {
         public TreeVisitor<?, ExecutionContext> getVisitor() {
             return new TreeVisitor<>() {
                 @Override
-                public @Nullable @NonNull Tree visit(@Nullable Tree tree, ExecutionContext ctx) {
+                public Tree visit(@Nullable Tree tree, ExecutionContext ctx) {
                     PlainText text = ((PlainText) tree);
                     assert text != null;
                     return text.withText(text.getText().replaceAll(find, replace));
