@@ -16,6 +16,7 @@
 package org.openrewrite.groovy.tree;
 
 import org.junit.jupiter.api.Test;
+import org.openrewrite.Issue;
 import org.openrewrite.java.tree.J;
 import org.openrewrite.java.tree.JavaType;
 import org.openrewrite.java.tree.TypeUtils;
@@ -40,9 +41,46 @@ class LiteralTest implements RewriteTest {
     }
 
     @Test
-    void string() {
+    void singleQuoteString() {
         rewriteRun(
-          groovy("'hello'")
+          groovy(
+            """
+              'hello'
+              """
+          )
+        );
+    }
+
+    @Test
+    void regexPatternSingleQuoteString() {
+        rewriteRun(
+          groovy(
+            """
+              ~"hello"
+              """
+          )
+        );
+    }
+
+    @Test
+    void doubleQuoteString() {
+        rewriteRun(
+          groovy(
+            """
+              "hello"
+              """
+          )
+        );
+    }
+
+    @Test
+    void regexPatternDoubleQuoteString() {
+        rewriteRun(
+          groovy(
+            """
+              ~"hello"
+              """
+          )
         );
     }
 
@@ -74,11 +112,35 @@ class LiteralTest implements RewriteTest {
     }
 
     @Test
+    void regexPatternQuotedString() {
+        rewriteRun(
+          groovy(
+            """
+              ~\"""
+                  " Hi "
+              \"""
+              """
+          )
+        );
+    }
+
+    @Test
     void slashString() {
         rewriteRun(
           groovy(
             """
               /.*"foo".*/
+              """
+          )
+        );
+    }
+
+    @Test
+    void regexPatternSlashString() {
+        rewriteRun(
+          groovy(
+            """
+              ~/foo/
               """
           )
         );
@@ -107,6 +169,17 @@ class LiteralTest implements RewriteTest {
     }
 
     @Test
+    void regexPatternGString() {
+        rewriteRun(
+          groovy(
+            """
+              ~"${ UUID.randomUUID() }"
+              """
+          )
+        );
+    }
+
+    @Test
     void gStringNoCurlyBraces() {
         rewriteRun(
           groovy(
@@ -124,7 +197,8 @@ class LiteralTest implements RewriteTest {
           groovy(
                 """
             "$System.env.BAR_BAZ"
-            """)
+            """
+          )
         );
     }
 
@@ -134,7 +208,8 @@ class LiteralTest implements RewriteTest {
           groovy(
                 """
             "${}"
-            """)
+            """
+          )
         );
     }
 
@@ -144,7 +219,8 @@ class LiteralTest implements RewriteTest {
           groovy(
                 """
             " ${ " ${ " " } " } "
-            """)
+            """
+          )
         );
     }
 
@@ -154,7 +230,8 @@ class LiteralTest implements RewriteTest {
           groovy(
                 """
             " ${""}\\n${" "} "
-            """)
+            """
+          )
         );
     }
 
@@ -186,6 +263,17 @@ class LiteralTest implements RewriteTest {
           groovy(
             """
               String s = "<a href=\\"$url\\">${displayName}</a>"
+              """
+          )
+        );
+    }
+
+    @Test
+    void gStringWithStringLiteralsWithParentheses() {
+        rewriteRun(
+          groovy(
+            """
+              "Hello ${from(":-)").via(''':-|(''').via(":-)").to(':-(')}!"
               """
           )
         );
@@ -226,8 +314,8 @@ class LiteralTest implements RewriteTest {
                 // Groovy AST represents 1.8 as a BigDecimal
                 // Java AST would represent it as Double
                 // Our AST could reasonably make either choice
-                var initializer = requireNonNull((J.Literal) ((J.VariableDeclarations) cu.getStatements().get(0))
-                  .getVariables().get(0).getInitializer());
+                var initializer = requireNonNull((J.Literal) ((J.VariableDeclarations) cu.getStatements().getFirst())
+                  .getVariables().getFirst().getInitializer());
                 if (initializer.getType() == JavaType.Primitive.Double) {
                     assertThat(initializer.getValue()).isEqualTo(1.8);
                 } else if (TypeUtils.isOfClassType(initializer.getType(), "java.math.BigDecimal")) {
@@ -312,6 +400,25 @@ class LiteralTest implements RewriteTest {
           groovy(
             """
               def a = (("-"))
+              """
+          ),
+          groovy(
+            """
+              from(":-)").via(''':-|(''').via(":-)").to(':-(')
+              """
+          )
+        );
+    }
+
+
+    @Test
+    @Issue("https://github.com/openrewrite/rewrite/issues/5232")
+    void stringWithMultipleBackslashes() {
+        rewriteRun(
+          groovy(
+            """
+              "".replaceAll('\\\\', '/')
+              "a\\b".replaceAll('\\\\', '/')
               """
           )
         );
