@@ -71,6 +71,35 @@ class ChangeTypeTest implements RewriteTest {
         );
     }
 
+    @Test
+    void okWithTopLevelType() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("java.util.Map$Entry", "java.util.List", true)),
+          java(
+            """
+              import java.util.Map;
+              
+              public class TestController {
+              
+                  public Map.Entry respond() {
+                     return null;
+                  }
+              }
+              """,
+            """
+              import java.util.List;
+              
+              public class TestController {
+              
+                  public List respond() {
+                     return null;
+                  }
+              }
+              """
+          )
+        );
+    }
+
     @Disabled("A bug fix reported by the community but not yet fixed")
     @Test
     void conflictingImports() {
@@ -208,8 +237,8 @@ class ChangeTypeTest implements RewriteTest {
               
               class Test {
                   List p;
-                  java.util.List p2;
-                  java.util.List p3;
+                  List p2;
+                  List p3;
               }
               """
           )
@@ -353,7 +382,11 @@ class ChangeTypeTest implements RewriteTest {
           java(a2),
           java(
             "public class B extends a.A1 {}",
-            "public class B extends a.A2 {}"
+            """
+              import a.A2;
+              
+              public class B extends A2 {}
+              """
           )
         );
     }
@@ -365,8 +398,14 @@ class ChangeTypeTest implements RewriteTest {
           java("package a.b.c;\npublic @interface A1 {}"),
           java("package a.b.d;\npublic @interface A2 {}"),
           java(
-            "@a.b.c.A1 public class B {}",
-            "@a.b.d.A2 public class B {}"
+            """
+              @a.b.c.A1 public class B {}
+              """,
+            """
+              import a.b.d.A2;
+              
+              @A2 public class B {}
+              """
           )
         );
     }
@@ -1356,7 +1395,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             spec -> spec.path("a/b/NoMatch.java").afterRecipe(cu -> {
                 assertThat(PathUtils.separatorsToUnix(cu.getSourcePath().toString())).isEqualTo("a/b/NoMatch.java");
-                assertThat(TypeUtils.isOfClassType(cu.getClasses().get(0).getType(), "x.y.Target")).isTrue();
+                assertThat(TypeUtils.isOfClassType(cu.getClasses().getFirst().getType(), "x.y.Target")).isTrue();
             })
           )
         );
@@ -1380,7 +1419,7 @@ class ChangeTypeTest implements RewriteTest {
               """,
             spec -> spec.path("a/b/Original.java").afterRecipe(cu -> {
                 assertThat(PathUtils.separatorsToUnix(cu.getSourcePath().toString())).isEqualTo("x/y/Target.java");
-                assertThat(TypeUtils.isOfClassType(cu.getClasses().get(0).getType(), "x.y.Target")).isTrue();
+                assertThat(TypeUtils.isOfClassType(cu.getClasses().getFirst().getType(), "x.y.Target")).isTrue();
             })
           )
         );
@@ -1553,8 +1592,8 @@ class ChangeTypeTest implements RewriteTest {
               import a.A2;
               
               public class Example {
-                  public A2 method(A2 a1) {
-                      return a1;
+                  public A2 method(A2 a2) {
+                      return a2;
                   }
               }
               """
@@ -1584,9 +1623,137 @@ class ChangeTypeTest implements RewriteTest {
 
                 assertThat(TypeUtils.asFullyQualified(methodType.getReturnType()).getFullyQualifiedName())
                   .isEqualTo("a.A2");
-                assertThat(TypeUtils.asFullyQualified(methodType.getParameterTypes().get(0)).getFullyQualifiedName())
+                assertThat(TypeUtils.asFullyQualified(methodType.getParameterTypes().getFirst()).getFullyQualifiedName())
                   .isEqualTo("a.A2");
             })
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite-static-analysis/issues/582")
+    @Test
+    void renameWhenInitializerTypeMatches() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("java.util.ArrayList", "java.util.LinkedList", false)),
+          //language=java
+          java(
+            """
+              import java.util.*;
+
+              class Test {
+                  void test() {
+                      List<Integer> arrayList = new ArrayList<>();
+                      arrayList.add(1);
+                      arrayList.add(2);
+                  }
+              }
+              """,
+            """
+              import java.util.*;
+
+              class Test {
+                  void test() {
+                      List<Integer> linkedList = new LinkedList<>();
+                      linkedList.add(1);
+                      linkedList.add(2);
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void doNotRenameRandomVariablesMatchingClassName() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("a.A1", "a.A2", false)),
+          java(
+            """
+              package a;
+              public class A1 {
+              }
+              """,
+            """
+              package a;
+              public class A2 {
+              }
+              """
+          ),
+          java(
+            """
+              package org.foo;
+              
+              import a.A1;
+              
+              public class Example {
+                  public String method(A1 a, String a1) {
+                      return a1;
+                  }
+              }
+              """,
+            """
+              package org.foo;
+              
+              import a.A2;
+              
+              public class Example {
+                  public String method(A2 a, String a1) {
+                      return a1;
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void noChangeToVariableNameWithoutChangeToType() {
+        rewriteRun(
+          spec -> spec.recipe(new ChangeType("a.A1", "a.A2", true)),
+          java(
+            """
+              package a;
+              public class A1 {
+              }
+              """
+          ),
+          java(
+            """
+              package a;
+              public class A2 {
+              }
+              """
+          ),
+          java(
+            """
+              package org.foo;
+              
+              import a.A1;
+              import a.A2;
+              
+              public class Example {
+                  public A1 method1(A1 a1) {
+                      return a1;
+                  }
+                  public A2 method2(A2 a1) {
+                      return a1; // Unchanged
+                  }
+              }
+              """,
+            """
+              package org.foo;
+              
+              import a.A2;
+              
+              public class Example {
+                  public A2 method1(A2 a2) {
+                      return a2;
+                  }
+                  public A2 method2(A2 a1) {
+                      return a1; // Unchanged
+                  }
+              }
+              """
           )
         );
     }
@@ -1942,6 +2109,7 @@ class ChangeTypeTest implements RewriteTest {
 
     @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/4452")
+    @Disabled("flaky on CI")
     void shouldFullyQualifyWhenNewTypeIsAmbiguous() {
         rewriteRun(
           spec -> spec.recipe(new ChangeType(
@@ -1989,7 +2157,8 @@ class ChangeTypeTest implements RewriteTest {
               public class A {
                 public static String A = "A";
               }
-              """),
+              """
+          ),
           java(
             """
               package org.ab;
@@ -1998,7 +2167,8 @@ class ChangeTypeTest implements RewriteTest {
                 public static String A = "A";
                 public static String B = "B";
               }
-              """),
+              """
+          ),
           // language=java
           java(
             """
@@ -2041,7 +2211,6 @@ class ChangeTypeTest implements RewriteTest {
               """
           )
         );
-
     }
 
     @Test
@@ -2057,9 +2226,9 @@ class ChangeTypeTest implements RewriteTest {
                 TreeVisitor<?, ExecutionContext> visitor = new ChangeType("hello.HelloClass", "hello.GoodbyeClass", false).getVisitor();
 
                 J.CompilationUnit cu = (J.CompilationUnit) visitor.visit(source, new InMemoryExecutionContext());
-                assertEquals("GoodbyeClass", cu.getClasses().get(0).getSimpleName());
+                assertEquals("GoodbyeClass", cu.getClasses().getFirst().getSimpleName());
 
-                J.ClassDeclaration cd = (J.ClassDeclaration) visitor.visit(source.getClasses().get(0), new InMemoryExecutionContext());
+                J.ClassDeclaration cd = (J.ClassDeclaration) visitor.visit(source.getClasses().getFirst(), new InMemoryExecutionContext());
                 assertEquals("GoodbyeClass", cd.getSimpleName());
             }))
         );
@@ -2079,7 +2248,8 @@ class ChangeTypeTest implements RewriteTest {
               a.property=java.lang.Integer
               c.property=java.lang.StringBuilder
               b.property=String
-              """, spec -> spec.path("application.properties"))
+              """,
+                spec -> spec.path("application.properties"))
         );
     }
 
@@ -2205,7 +2375,8 @@ class ChangeTypeTest implements RewriteTest {
                     return b.build();
                 }
               }
-              """, """
+              """,
+                """
               import foo.A;
               
               class Test {
